VO-2910 Fixes table header text-wrapping by decreasing decription column width.

--- a/app/styles/common/_tables.scss
+++ b/app/styles/common/_tables.scss
@@ -159,7 +159,7 @@
 
 .table td,
 .table th {
-   // Some columns need to be a certain
+    // Some columns need to be a certain
     // width to prevent unwanted text-wrapping.
     &.actions {
       min-width: 150px;
@@ -173,6 +173,11 @@
     &.description {
       min-width: 225px;
       max-width: 300px;
+    }
+
+    &.description-narrow {
+      min-width: 225px;
+      max-width: 225px;
     }
 
     &.description-no-vin {
